--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,16 +1,92 @@
 body {
+  margin: 0;
   align-items: center;
   background-color: rgba(0, 204, 255, 0.829);
-  display: flex;
   justify-content: center;
   height: 100vh;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.navbar {
+  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  background-color: #08d;
+}
+
+.nav-container {
+  display: flex;
+  flex: 0 0 auto;
+  flex-wrap: inherit;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin-right: auto;
+  margin-left: auto;
+  width: 50%;
+  max-width: 1320px;
+}
+
+.navbar-brand {
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  text-decoration: none;
+  white-space: nowrap;
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar-collapse {
+  display: flex;
+  flex-basis: 100%;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: flex-end;
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar-nav {
+  display: flex;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  margin-left: auto !important;
+}
+
+.nav-link {
+  color: black;
+  font-size: 1rem;
+}
+.nav-item {
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
 }
 
 .form {
   background-color: #15172b;
   border-radius: 20px;
   box-sizing: border-box;
-  height: 420px;
+  height: 360px;
   padding: 20px;
   width: 320px;
 }
@@ -24,7 +100,7 @@ body {
   font-family: sans-serif;
   font-size: 36px;
   font-weight: 600;
-  margin-top: 10px;
+  margin-top: 5px;
   text-align: center;
 }
 
@@ -33,7 +109,7 @@ body {
   font-family: sans-serif;
   font-size: 16px;
   font-weight: 600;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .input-container {
