--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     align-items: center;
     /* background-color: rgba(0, 204, 255, 0.829); */
-    background-image: url("../img/background.png");
+    background-image: url("./app/img/background.png");
     background-size: cover;
     justify-content: center;
     height: 98vh;
