--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: Arial, Verdana, Tahoma;
     align-items: center;
     /* background-color: rgba(0, 204, 255, 0.829); */
     background-image: url("./app/img/background.png");
@@ -57,6 +58,7 @@ h2 {
 .navbar__auth {
     display: flex;
     padding-left: 0;
+    margin-top: 0;
     margin-bottom: 0;
     list-style: none;
     margin-left: auto !important;
@@ -65,6 +67,7 @@ h2 {
 .nav__link {
     font-size: 1rem;
     color: white;
+    text-decoration: none;
 }
 .nav__item {
     padding: 3px;
